# NeedledroppersDeclick

./: CMakeLists.txt  README.md
.cache/clangd/index/: AlternateSet.hh.0E8A8E90C3FFF7E8.idx  AlternateSubst.hh.480DBF83E97D0696.idx  AlternateSubstFormat1.hh.3C1F6F730A9C5718.idx  Anchor.hh.96BD4EFC974BB3A1.idx  AnchorFormat1.hh.CC99592B41A4A05B.idx  AnchorFormat2.hh.7C25E95DC328EED7.idx  AnchorFormat3.hh.15E73AC543070870.idx  AnchorMatrix.hh.3D712CC0FE7ACEBC.idx  BatchQueue.cpp.735C004A796D52EF.idx  BatchQueue.h.6CD150EDDF7D3919.idx  BidiChain.c.C440C8CB7D6BB10A.idx  BidiChain.h.6F770876D2F2FCD2.idx  BidiTypeLookup.c.CB37ADA909945571.idx  BidiTypeLookup.h.AD0F3F8F6479DDBD.idx  BracketQueue.c.28B19C19DF71EAA8.idx  BracketQueue.h.D47AF7B33ABCD71C.idx  BracketType.h.AC70992F6C4F1718.idx  CBDT.hh.C4873833FA44F006.idx  COLR.hh.E884A4C4A01E8305.idx  CPAL.hh.76272657AD906C72.idx  ChainContextPos.hh.52EBE705330E1829.idx  ChainContextSubst.hh.997E2C19FBEFE074.idx  ClickDetector.cpp.8D6FF3DA3C9C19B7.idx  ClickDetector.h.D5B87CCCFA9B5963.idx  Common.hh.9B0CCB6EB3467D04.idx  Common.hh.F18EBB38EBAD2734.idx  CompositeGlyph.hh.67CE3AD62C4E4049.idx  ContextPos.hh.46FD7137F3C8FBAB.idx  ContextSubst.hh.7C27353DB0506086.idx  Coverage.hh.8912706F276D7BE3.idx  CoverageFormat1.hh.3B18CC6123FEEE70.idx  CoverageFormat2.hh.D470379A783D7469.idx  CursivePos.hh.722F467FB411A00E.idx  CursivePosFormat1.hh.81B8F7BCEF879365.idx  DetectionThread.cpp.53FF78C2A343F44E.idx  DetectionThread.h.8691797FEC59ABBC.idx  ExtensionPos.hh.759D967B0FFB690A.idx  ExtensionSubst.hh.96AF84649EC903CE.idx  GDEF.hh.95885610809C9E61.idx  GPOS.hh.8FCEEFA7D3AB2CE8.idx  (+1726 more)
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_debug/NeedledroppersDeclick_artefacts/JuceLibraryCode/: Info.txt
build_debug/NeedledroppersDeclick_artefacts/JuceLibraryCode/Debug/: Defs.txt
build_debug/libs/JUCE/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
build_debug/libs/JUCE/modules/: Makefile  cmake_install.cmake
build_debug/libs/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build_debug/libs/JUCE/tools/modules/: Makefile  (+1 more)
include/: MainComponent.h
include/dsp/: ClickDetector.h  RepairEngine.h  WaveletEngine.h
include/threading/: DetectionThread.h  ProcessingThread.h
include/ui/: BatchQueue.h  ParameterPanel.h  StatusBar.h  TransportBar.h  WaveformView.h
src/: Main.cpp  MainComponent.cpp
src/dsp/: ClickDetector.cpp  RepairEngine.cpp  WaveletEngine.cpp
src/threading/: DetectionThread.cpp  ProcessingThread.cpp
src/ui/: BatchQueue.cpp  ParameterPanel.cpp  StatusBar.cpp  TransportBar.cpp  WaveformView.cpp
tests/: test_detector.cpp  test_repair.cpp  test_wavelet.cpp
